OS2DISP-113: Fixed z-index for progress box

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -51,6 +51,8 @@ body {
   top: 10px;
   right: 10px;
   padding: 5px;
+
+  z-index: 1000;
 }
 
 .progress-bar {
